# FaustCPPConverter

./: .clang-tidy  CMakeLists.txt
Apps/: CMakeLists.txt
Apps/ConsoleTester/: CMakeLists.txt  Main.cpp
CMake/: CPM.cmake  FindDependencies.cmake
Faust/: CMakeLists.txt
Faust/Wrapper/: CMakeLists.txt  FaustWrapper.h  Params.h  UIWrapper.h
